--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -16,6 +16,18 @@ body {
      padding: 20px;
 }
 
+.project {
+     margin-left: 20px;
+     background-color: lightblue;
+     padding: 20px;
+     width: 520px;
+}
+
+.project p {
+    font-variant: small-caps;
+
+}
+
 .jumbotron {
 	position: relative;
 	background: none;
